# PromiseKit

./: CMakeLists.txt  Package.swift
.github/workflows/: ci.yml
Sources/PMKFoundation/: NSObject+Promise.swift  NSURLSession+Promise.swift  afterlife.swift
Sources/PromiseKit/Dispatchers/: CoreDataDispatcher.swift
Sources/PromiseKit/Wrappers/: ThenableWrappers.swift
